# Amazon_books

./: .gitignore  README.md  scrape.py
data_collection/: Dockerfile  data_collection.py  pyproject.toml
data_collection/config/: logging_config.json  scrape_config.json
data_collection/utils/: logging.py
data_processing/: docker-compose.yml
data_processing/etl/: process_categories.ipynb  process_categories.py
